--- a/app.json
+++ b/app.json
@@ -52,7 +52,7 @@
       "eas": {
         "projectId": "a1fc20bc-95da-4daa-99bc-de6fde822b69"
       },
-      "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+      "locationAlwaysAndWhenInUsePermission": "Allow Furniture-Fixer to use your location."
     }
   }
 }
